--- a/EZ/css/style.css
+++ b/EZ/css/style.css
@@ -1,6 +1,17 @@
-/* Body and General Styles */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+} 
+
 body {
-    background-color: #662917;
+    background-image: url("../assets/bg.png");
     color: white;
     font-family: Arial, sans-serif;
     margin: 0;
@@ -15,14 +26,14 @@ body {
 
 /* Left Side - Image Section */
 .left-side {
-    background: url("../images/bar-interior.jpg") no-repeat center center/cover;
+    background: url("../assets/bg.png") no-repeat center center/cover;
     width: 50%;
     min-height: 100vh;
 }
 
 /* Right Side - Login Form */
 .right-side {
-    width: 50%;
+    width: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,9 +101,8 @@ body {
     }
 }
 
-
 p {
-    color: black;
+    color: #f9ff00;
 }
 
 .navbar {
